--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
             #instituto-abc-logo {
                 height: 150px;
             }
+
+            /* Fonte */
+            #desafio-text h2 {
+                font-size: 29px;
+            }
+            #desafio-text h3 {
+                font-size: 15px;
+            }
         }
     </style>
 </head>
