--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         }
 
 
-        /* Tela > 1100px */
-        @media (min-width: 1100px) {
+        /* Tela >= 1009px */
+        @media (min-width: 1009px) {
             /* Divisão */
             #content {
                 display: flex;
@@ -77,7 +77,7 @@
             }
         }
 
-        /* Tela < 1100px */
+        /* Tela <= 1100px */
         @media (max-width: 1100px) {
             /* Centralizar */
             #content div {
@@ -92,7 +92,7 @@
             }
         }
 
-        /* Tela < 530px */
+        /* Tela <= 530px */
         @media (max-width: 530px) {
             /* Background */
             #content .text {
