--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             padding: 10px;
             width: 340px;
             border-radius: 10px;
+            margin-bottom: 1vh;
         }
 
         /* Imagens */
@@ -43,10 +44,7 @@
         
 
         /* Fonte */
-        #desafio-text h2 {
-            font-size: 40px;
-        }
-        #desafio-text h3 {
+        #content .text h3 {
             font-size: 21px;
         }
 
@@ -109,9 +107,6 @@
             }
 
             /* Fonte */
-            #desafio-text h2 {
-                font-size: 29px;
-            }
             #desafio-text h3 {
                 font-size: 15px;
             }
@@ -133,11 +128,11 @@
     <div id="content">
         <div id="left">
             <div class="image">
-                <h1>XCO</h1>
                 <img id="desafio-romana-mtb" src="/src/img/desafio-romana-mtb-logo.webp" alt="Logo Desafio Romana MTB.">
             </div>
             <div id="desafio-text" class="text">
-                <h1>04 / 02 / 2024</h1>
+                <h2>04 / 02 / 2024</h2>
+                <h1>XCO</h1>
                 <h2>BARROSO / MG</h2>
                 <h3>EM PROL DO INSTITUTO ABC</h3>
             </div>
@@ -146,13 +141,15 @@
             </div>
         </div>
         <div id="right">
-            <h1>PEDAL DE FATIMA</h1>
             <div class="text">
                 <h2>12 / 05 / 2024</h2>
+                <h1>PEDAL DE FÁTIMA</h1>
+                <h3>PASSEIO DE BIKE</h3>
             </div>
-            <h1>PEDAL DE SANT'ANA</h1>
             <div class="text">
                 <h2>18 / 07 / 2024</h2>
+                <h1>PEDAL DE SANT'ANA</h1>
+                <h3>PASSEIO DE BIKE</h3>
             </div>
         </div>
     </div>
