--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             }
 
             /* Fonte */
-            #desafio-text h3 {
+            #content .text h3 {
                 font-size: 15px;
             }
         }
@@ -144,12 +144,12 @@
             <div class="text">
                 <h2>12 / 05 / 2024</h2>
                 <h1>PEDAL DE FÁTIMA</h1>
-                <h3>PASSEIO DE BIKE</h3>
+                <h3>TURISMO</h3>
             </div>
             <div class="text">
                 <h2>18 / 07 / 2024</h2>
                 <h1>PEDAL DE SANT'ANA</h1>
-                <h3>PASSEIO DE BIKE</h3>
+                <h3>TURISMO</h3>
             </div>
         </div>
     </div>
