--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -32,7 +32,7 @@
     <div id="content">
         <div>
             <h1>Regulamento</h1>
-            <object id="regulamento-pdf" type="text/html" data="https://docs.google.com/gview?url=https://romana-mtb.github.io/src/pdf/regulamento-desafio-romana-mtb-2024.pdf&embedded=true">
+            <object id="regulamento-pdf" type="text/html" data="https://docs.google.com/gview?url=https://romanamtb.com.br/src/pdf/regulamento-desafio-romana-mtb-2024.pdf&embedded=true">
                 <p>Não foi possivel exibir o arquivo. Tente recarregar a página, ou baixe-o <a href="/src/pdf/regulamento-desafio-romana-mtb-2024.pdf" download="Regulamento - Desafio Romana MTB 2024.pdf">aqui</a>.</p>
             </object>
         </div>
