--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, nofollow">
+    <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Faça sua inscrição para o Romana MTB 2024.">
     <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSdhUSBLFABn7iRBri_LWnEtFMBcV5SdgdV2NaIvO3MgxgscOQ/viewform?pli=1'" />
     <title>Inscrição | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
-    <link rel="icon" href="/src/img/romana-mtb-icon.webp">
+    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         /* Inscrição formulario */
         #content h3 {
@@ -24,7 +25,7 @@
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
                 <li><a href="/fotos">FOTOS</a></li>
