--- a/resultados/index.html
+++ b/resultados/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
+    <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Veja os resultados das corridas da Romana MTB.">
     <title>Resultados | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
-    <link rel="icon" href="/src/img/romana-mtb-icon.webp">
+    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
                 <li><a href="/fotos">FOTOS</a></li>
