--- a/fotos/index.html
+++ b/fotos/index.html
@@ -27,7 +27,7 @@
         @media (max-width: 1100px) {
             /* Imagens */
             #content div img {
-                max-height: 150px;
+                max-height: 200px;
             }
         }
 
@@ -36,7 +36,7 @@
         @media (max-width: 530px) {
             /* Imagens */
             #content div img {
-                max-height: 100px;
+                max-height: 150px;
             }
         }
     </style>
@@ -64,7 +64,7 @@
             </script>
         </div>
         <div id="apae">
-            <h2>1° TRILHÃO APAE:</h2>
+            <h2>1° TRILHÃO APAE</h2>
             <script>
                 for (let i = 0; i <= 62; i++) {
                     document.write('<img src="/src/img/photos/apae/img-' + i.toString().padStart(3, '0') + '.webp" alt="Foto 1º Trilhão APAE.">');
