--- a/fotos/index.html
+++ b/fotos/index.html
@@ -60,7 +60,7 @@
             <h2>MTB FEST 2023</h2>
             <script>
                 for (let i = 0; i <= 81; i++) {
-                    document.write('<img src="/src/img/photos/mtb-fest-2023/img-' + i.toString().padStart(3, '0') + '.webp" alt="Foto MTB Fest.">');
+                    document.write('<img src="/src/img/photos/mtb-fest-2023/img-' + i.toString().padStart(3, '0') + '.webp" alt="Foto MTB Fest 2023.">');
                 }
             </script>
         </div>
@@ -68,7 +68,7 @@
             <h2>TRILHÃO APAE 2019</h2>
             <script>
                 for (let i = 0; i <= 62; i++) {
-                    document.write('<img src="/src/img/photos/apae-2019/img-' + i.toString().padStart(3, '0') + '.webp" alt="Foto 1º Trilhão APAE.">');
+                    document.write('<img src="/src/img/photos/apae-2019/img-' + i.toString().padStart(3, '0') + '.webp" alt="Foto Trilhão APAE 2019.">');
                 }
             </script>
         </div>
