--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <style>
         /* Background */
         #content {
-            height: 100%;
+            min-height: 100%;
+            min-width: 90%;
             background-image: url("/src/img/romana-mtb/bike-background.webp");
             background-size: cover;
             background-position: right;
