--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
         /* Patrocínio */
         #bottom {
+            padding: 0px;
             bottom: 50px;
         }
         #partners {
@@ -83,6 +84,7 @@
         @media (min-width: 1101px) {
             /* Divisão */
             .flex {
+                padding: 0px;
                 display: flex;
                 padding-bottom: 7vh;
             }
@@ -117,7 +119,7 @@
             }
             #content #right {
                 padding-top: 0px;
-                padding-bottom: 7vh;
+                padding-bottom: 30px;
             }
         }
 
@@ -141,6 +143,10 @@
             #content .text h3 {
                 font-size: 15px;
             }
+
+            #partners img {
+                max-height: 150px;
+            }
         }
     </style>
 </head>
@@ -157,7 +163,7 @@
         </nav>
     </header>
     <div id="content">
-        <div class="flex" style="padding: 0px;">
+        <div class="flex">
             <div id="left">
                 <div class="image">
                     <img id="desafio-romana-mtb" src="/src/img/romana-mtb/desafio-romana-mtb-logo.webp" alt="Logo Desafio Romana MTB.">
@@ -169,7 +175,7 @@
                     <h3>EM PROL DO INSTITUTO ABC</h3>
                 </div>
                 <div class="image">
-                    <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/partners/instituto-abc.webp" alt="Logo Instituto ABC."></a><br>
+                    <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/partners/instituto-abc.webp" alt="Logo Instituto ABC."></a>
                 </div>
             </div>
             <div id="right">
@@ -185,22 +191,27 @@
                 </div>
             </div>
         </div>
-        <div id="bottom" style="padding: 0px;">
+        <div id="bottom">
             <div id="partners">
                 <h2>PARCEIROS:</h2>
-                <div style="padding: 0px;">
+                <div>
                     <img src="/src/img/partners/automarax.webp" alt="Logo Automarax.">
                     <img src="/src/img/partners/bike-podium.webp" alt="Logo Bike Podium.">
                     <img src="/src/img/partners/bombeiros-voluntarios.webp" alt="Logo Bombeiros Voluntarios.">
                     <img src="/src/img/partners/conara.webp" alt="Logo Conara.">
                     <img src="/src/img/partners/csn.webp" alt="Logo CSN.">
                     <img src="/src/img/partners/del-rey-bike.webp" alt="Logo Del Rey Bike.">
+                    <img src="/src/img/partners/domiciano-bike.jpg" alt="Logo Domiciano Bike.">
+                    <img src="/src/img/partners/ebex.jpg" alt="Logo Ebex.">
                     <img src="/src/img/partners/fluir-bike.webp" alt="Logo Fluir Bike.">
+                    <img src="/src/img/partners/kowards-moto-club.jpg" alt="Logo Koward's Moto Club.">
+                    <img src="/src/img/partners/liberdade-fm.jpg" alt="Logo Liberdade FM.">
                     <img src="/src/img/partners/mlj.webp" alt="Logo MLJ.">
                     <img src="/src/img/partners/multiplanar.webp" alt="Logo Multiplanar.">
                     <img src="/src/img/partners/racing-bike.webp" alt="Logo Racing Bike.">
                     <img src="/src/img/partners/sicoob-mais.webp" alt="Logo Sicoob Mais.">
                     <img src="/src/img/partners/sigo.webp" alt="Logo SIGO.">
+                    <img src="/src/img/partners/tec-ar.jpg" alt="Logo Tec Ar.">
                     <img src="/src/img/partners/vidromix.webp" alt="Logo Vidromix.">
                 </div>
             </div>
