--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@
                     <img src="/src/img/partners/conara.webp" alt="Logo Conara.">
                     <img src="/src/img/partners/csn.webp" alt="Logo CSN.">
                     <img src="/src/img/partners/del-rey-bike.webp" alt="Logo Del Rey Bike.">
-                    <img src="/src/img/partners/domiciano-bike.jpg" alt="Logo Domiciano Bike.">
-                    <img src="/src/img/partners/ebex.jpg" alt="Logo Ebex.">
+                    <img src="/src/img/partners/domiciano-bike.webp" alt="Logo Domiciano Bike.">
+                    <img src="/src/img/partners/ebex.webp" alt="Logo Ebex.">
                     <img src="/src/img/partners/fluir-bike.webp" alt="Logo Fluir Bike.">
-                    <img src="/src/img/partners/kowards-moto-club.jpg" alt="Logo Koward's Moto Club.">
-                    <img src="/src/img/partners/liberdade-fm.jpg" alt="Logo Liberdade FM.">
+                    <img src="/src/img/partners/kowards-moto-club.webp" alt="Logo Koward's Moto Club.">
+                    <img src="/src/img/partners/liberdade-fm.webp" alt="Logo Liberdade FM.">
                     <img src="/src/img/partners/mlj.webp" alt="Logo MLJ.">
                     <img src="/src/img/partners/multiplanar.webp" alt="Logo Multiplanar.">
                     <img src="/src/img/partners/racing-bike.webp" alt="Logo Racing Bike.">
                     <img src="/src/img/partners/sicoob-mais.webp" alt="Logo Sicoob Mais.">
                     <img src="/src/img/partners/sigo.webp" alt="Logo SIGO.">
-                    <img src="/src/img/partners/tec-ar.jpg" alt="Logo Tec Ar.">
+                    <img src="/src/img/partners/tec-ar.webp" alt="Logo Tec Ar.">
                     <img src="/src/img/partners/vidromix.webp" alt="Logo Vidromix.">
                 </div>
             </div>
