--- a/resultados/index copy.html
+++ b/resultados/index copy.html
@@ -3,27 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
-    <title>Erro 404 - Romana MTB</title>
+    <meta name="robots" content="index, follow">
+    <meta property="og:site_name" content="Romana MTB">
+    <meta name="description" content="Veja os resultados das corridas da Romana MTB.">
+    <title>Resultados | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
-    <style>
-        #content div {
-            top: 250px;
-            text-align: center;
-        }
-        #content h1 {
-            color: #fff;
-            font-weight: normal;
-            font-size: 80px;
-            margin: 0;
-        }
-        #content p {
-            font-weight: normal;
-            font-size: 30px;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -32,15 +18,15 @@
             <ul>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/resultados" target="_blank">RESULTADOS</a></li>
+                <li><a href="/resultados">RESULTADOS</a></li>
                 <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
     <div id="content">
         <div>
-            <h1>ERRO 404</h1>
-            <p>Página não encontrada.</p>
+            <h1>Resultados</h1>
+            <p>Sem resultados no momento. Volte em <b>05/02/2024</b>.</p>
         </div>
     </div>
     <footer>
