--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/resultados" target="_blank">RESULTADOS</a></li>
+                <li><a href="/resultados">RESULTADOS</a></li>
                 <li><a href="/inscricao">INSCRIÇÃO</a></li>
             </ul>
         </nav>
