--- a/resultados/index.html
+++ b/resultados/index.html
@@ -12,8 +12,25 @@
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
 </head>
 <body>
+    <header>
+        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <nav>
+            <ul>
+                <li><a href="/fotos">FOTOS</a></li>
+                <li><a href="/regulamento">REGULAMENTO</a></li>
+                <li><a href="/resultados">RESULTADOS</a></li>
+                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="content">
-        <iframe src="https://apuracaodetempos.com.br/Resultados/desafioromanamtbxco/Resultados.html" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
+        <div>
+            <h1>Resultados</h1>
+            <p>Sem resultados no momento.</p>
+        </div>
     </div>
+    <footer>
+        <p>© Romana MTB - Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
