--- a/fotos/index.html
+++ b/fotos/index.html
@@ -58,23 +58,35 @@
         <h1>Fotos</h1>
         <div id="mtb-fest-2023">
             <h2>MTB FEST 2023</h2>
-            <script>
-                for (let i = 0; i <= 81; i++) {
-                    document.write('<img src="/src/img/photos/mtb-fest-2023/img-' + i.toString().padStart(3, '0') + '.webp" alt="Foto MTB Fest 2023.">');
-                }
-            </script>
         </div>
         <div id="apae-2019">
             <h2>TRILHÃO APAE 2019</h2>
-            <script>
-                for (let i = 0; i <= 62; i++) {
-                    document.write('<img src="/src/img/photos/apae-2019/img-' + i.toString().padStart(3, '0') + '.webp" alt="Foto Trilhão APAE 2019.">');
-                }
-            </script>
         </div>
     </div>
     <footer>
         <p>© Romana MTB - Todos os direitos reservados.</p>
     </footer>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var photosContainer = document.getElementById('apae-2019');
+            for (let i = 0; i <= 62; i++) {
+                // Cria um elemento de imagem
+                var img = document.createElement('img');
+                // Src e Alt da imagem
+                img.src = "/src/img/photos/apae-2019/img-" + i.toString().padStart(3, "0") + ".webp";
+                img.alt = "Foto Trilhão APAE 2019.";
+                // Adiciona a imagem ao div
+                photosContainer.appendChild(img);
+            }
+            
+            var photosContainer = document.getElementById('mtb-fest-2023');
+            for (let i = 0; i <= 81; i++) {
+                var img = document.createElement('img');
+                img.src = "/src/img/photos/mtb-fest-2023/img-" + i.toString().padStart(3, "0") + ".webp";
+                img.alt = "Foto MTB Fest 2023.";
+                photosContainer.appendChild(img);
+            }
+        });
+      </script>
 </body>
 </html>
