--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         /* Background */
-        #content {
-            min-height: 100%;
-            min-width: 90%;
+        body {
+            min-height: 100vh;
+            min-width: 100vw;
             background-image: url("/src/img/romana-mtb/bike-background.webp");
             background-size: cover;
             background-position: right;
@@ -165,6 +165,7 @@
     <div id="content">
         <div class="flex">
             <div id="left">
+                <!--
                 <div class="image">
                     <img id="desafio-romana-mtb" src="/src/img/romana-mtb/desafio-romana-mtb-logo.webp" alt="Logo Desafio Romana MTB.">
                 </div>
@@ -177,13 +178,21 @@
                 <div class="image">
                     <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="/src/img/partners/instituto-abc.webp" alt="Logo Instituto ABC."></a>
                 </div>
-            </div>
-            <div id="right">
+                -->
                 <div class="text">
                     <h2>12 / 05 / 2024</h2>
                     <h1>PEDAL DE FÁTIMA</h1>
                     <h3>TURISMO</h3>
                 </div>
+            </div>
+            <div id="right">
+                <!--
+                <div class="text">
+                    <h2>12 / 05 / 2024</h2>
+                    <h1>PEDAL DE FÁTIMA</h1>
+                    <h3>TURISMO</h3>
+                </div>
+                -->
                 <div class="text">
                     <h2>18 / 07 / 2024</h2>
                     <h1>PEDAL DE SANT'ANA</h1>
@@ -192,6 +201,7 @@
             </div>
         </div>
         <div id="bottom">
+            <!--
             <div id="partners">
                 <h2>PARCEIROS:</h2>
                 <div>
@@ -215,6 +225,7 @@
                     <img src="/src/img/partners/vidromix.webp" alt="Logo Vidromix.">
                 </div>
             </div>
+            -->
         </div>
     </div>
     <footer>
