--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -33,7 +33,8 @@
     <div id="content">
         <div>
             <h1>Regulamento</h1>
-            <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romanamtb.com.br/src/pdf/regulamento-desafio-romana-mtb-2024.pdf&embedded=true"></iframe>
+            <!--<p>Regulamento ainda não estão disponível.</p>-->
+            <iframe id="regulamento-pdf" src="https://docs.google.com/gview?url=https://romanamtb.com.br/src/pdf/regulamento-pedal-de-fatima-2024.pdf&embedded=true"></iframe>
         </div>
     </div>
     <footer>
