--- a/404.html
+++ b/404.html
@@ -33,7 +33,8 @@
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
                 <li><a href="/resultados" target="_blank">RESULTADOS</a></li>
-                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
+                <li><a href="/inscricao">INSCRIÇÃO</a></li>
+                <!--<li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>-->
             </ul>
         </nav>
     </header>
