--- a/fotos/index.html
+++ b/fotos/index.html
@@ -50,7 +50,8 @@
                 <li><a href="/fotos">FOTOS</a></li>
                 <li><a href="/regulamento">REGULAMENTO</a></li>
                 <li><a href="/resultados">RESULTADOS</a></li>
-                <li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>
+                <li><a href="/inscricao">INSCRIÇÃO</a></li>
+                <!--<li><a href="/inscricao" target="_blank">INSCRIÇÃO</a></li>-->
             </ul>
         </nav>
     </header>
