--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta property="og:site_name" content="Romana MTB">
-    <meta name="description" content="Regulamento para o Desafio Romana MTB 2024.">
+    <meta name="description" content="Regulamento para o Pedal de Fátima 2024.">
     <title>Regulamento | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
