--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, nofollow">
     <meta property="og:site_name" content="Romana MTB">
-    <meta name="description" content="Faça sua inscrição para o Romana MTB 2024.">
+    <meta name="description" content="Faça sua inscrição para o Pedal de Fátima 2024.">
     <!--<meta http-equiv="Refresh" content="0; url='ttps://docs.google.com/forms/'" />-->
     <title>Inscrição | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
