--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta property="og:site_name" content="Romana MTB">
-    <meta name="description" content="Romana MTB, eventos de bike.">
+    <meta name="description" content="Maior organizador de eventos de bike da região.">
     <title>Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
