--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -6,14 +6,13 @@
     <meta name="robots" content="index, nofollow">
     <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Faça sua inscrição para o Romana MTB 2024.">
-    <!--<meta http-equiv="Refresh" content="0; url='ttps://docs.google.com/forms/'" />-->
+    <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSc7wX5O5kKfe9tUkpLx5TLSsy8X45s5qMAAWzB9pBqZBNAz5g/viewform?usp=sf_link'" />
     <title>Inscrição | Romana MTB</title>
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/romana-mtb.css">
     <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         /* Inscrição formulario */
-        /*
         #content h3 {
             padding-top: 100px;
             text-align: center;
@@ -22,7 +21,6 @@
             padding-top: 5%;
             text-align: center;
         }
-        */
     </style>
 </head>
 <body>
@@ -41,10 +39,8 @@
         <div>
             <h1>Inscrição</h1>
             <p>Inscrições ainda não estão disponíveis.</p>
-            <!--
             <h3>Redirecionado para um formulário seguro...</h3>
-            <p>Se não for redirecionado clique <a href="https://docs.google.com/forms/">aqui</a>.</p>
-            -->
+            <p>Se não for redirecionado clique <a href="https://docs.google.com/forms/d/e/1FAIpQLSc7wX5O5kKfe9tUkpLx5TLSsy8X45s5qMAAWzB9pBqZBNAz5g/viewform?usp=sf_link">aqui</a>.</p>
         </div>
     </div>
     <footer>
