--- a/inscricao.html
+++ b/inscricao.html
@@ -6,13 +6,14 @@
     <meta name="robots" content="index, nofollow">
     <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Faça sua inscrição para o Pedal de Fátima 2024.">
-    <meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSc7wX5O5kKfe9tUkpLx5TLSsy8X45s5qMAAWzB9pBqZBNAz5g/viewform?usp=sf_link'" />
+    <!--<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e//viewform?usp=sf_link'"/>-->
     <title>Inscrição | Romana MTB</title>
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/romana-mtb.css">
-    <link rel="icon" href="/src/img/romana-mtb/romana-mtb-icon.webp">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/romana-mtb.css">
+    <link rel="icon" href="./src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         /* Inscrição formulario */
+        /*
         #content h3 {
             padding-top: 100px;
             text-align: center;
@@ -21,17 +22,18 @@
             padding-top: 5%;
             text-align: center;
         }
+        */
     </style>
 </head>
 <body>
     <header>
-        <a href="/"><img src="/src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="./"><img src="./src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="/fotos">FOTOS</a></li>
-                <li><a href="/regulamento">REGULAMENTO</a></li>
-                <li><a href="/resultados">RESULTADOS</a></li>
-                <li><a href="/inscricao">INSCRIÇÃO</a></li>
+                <li><a href="./fotos">FOTOS</a></li>
+                <li><a href="./regulamento">REGULAMENTO</a></li>
+                <li><a href="./resultados">RESULTADOS</a></li>
+                <li><a href="./inscricao">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
@@ -39,8 +41,10 @@
         <div>
             <h1>Inscrição</h1>
             <p>Inscrições ainda não estão disponíveis.</p>
+            <!--
             <h3>Redirecionado para um formulário seguro...</h3>
-            <p>Se não for redirecionado clique <a href="https://docs.google.com/forms/d/e/1FAIpQLSc7wX5O5kKfe9tUkpLx5TLSsy8X45s5qMAAWzB9pBqZBNAz5g/viewform?usp=sf_link">aqui</a>.</p>
+            <p>Se não for redirecionado clique <a href="https://docs.google.com/forms/d/e//viewform?usp=sf_link">aqui</a>.</p>
+            -->
         </div>
     </div>
     <footer>
