--- a/index.html
+++ b/index.html
@@ -179,15 +179,6 @@
                 <div class="image">
                     <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="./src/img/partners/instituto-abc.webp" alt="Logo Instituto ABC."></a>
                 </div>
-                -->
-                <div class="text">
-                    <h2>19 / 05 / 2024</h2>
-                    <h1>PEDAL DE FÁTIMA</h1>
-                    <h3>TURISMO</h3>
-                </div>
-            </div>
-            <div id="right">
-                <!--
                 <div class="text">
                     <h2>19 / 05 / 2024</h2>
                     <h1>PEDAL DE FÁTIMA</h1>
@@ -199,6 +190,20 @@
                     <h1>PEDAL DE SANT'ANA</h1>
                     <h3>TURISMO</h3>
                 </div>
+            </div>
+            <div id="right">
+                <!--
+                <div class="text">
+                    <h2>19 / 05 / 2024</h2>
+                    <h1>PEDAL DE FÁTIMA</h1>
+                    <h3>TURISMO</h3>
+                </div>
+                <div class="text">
+                    <h2>18 / 07 / 2024</h2>
+                    <h1>PEDAL DE SANT'ANA</h1>
+                    <h3>TURISMO</h3>
+                </div>
+                -->
             </div>
         </div>
         <div id="bottom">
