--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
         }
 
 
+        /* Centro */
+        #center div {
+            text-align: center;
+            margin: auto;
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+
+
         /* Tela >= 1101px */
         @media (min-width: 1101px) {
             /* Divisão */
@@ -164,6 +173,13 @@
         </nav>
     </header>
     <div id="content">
+        <div id="center">
+            <div class="text">
+                <h2>18 / 07 / 2024</h2>
+                <h1>PEDAL DE SANT'ANA</h1>
+                <h3>TURISMO</h3>
+            </div>
+        </div>
         <div class="flex">
             <div id="left">
                 <!--
@@ -185,11 +201,7 @@
                     <h3>TURISMO</h3>
                 </div>
                 -->
-                <div class="text">
-                    <h2>18 / 07 / 2024</h2>
-                    <h1>PEDAL DE SANT'ANA</h1>
-                    <h3>TURISMO</h3>
-                </div>
+
             </div>
             <div id="right">
                 <!--
