--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>Erro 404 - Romana MTB</title>
+    <title>Erro 404 | Romana MTB</title>
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/romana-mtb.css">
     <link rel="icon" href="./src/img/romana-mtb/romana-mtb-icon.webp">
