--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Maior organizador de eventos de bike da região.">
     <title>Romana MTB</title>
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/romana-mtb.css">
-    <link rel="icon" href="./src/img/romana-mtb/romana-mtb-icon.webp">
+    <link rel="stylesheet" href="../src/css/reset.css">
+    <link rel="stylesheet" href="../src/css/romana-mtb.css">
+    <link rel="icon" href="../src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         /* Background */
         body {
             min-height: 100vh;
             min-width: 100vw;
-            background-image: url("./src/img/romana-mtb/bike-background.webp");
+            background-image: url("../src/img/romana-mtb/bike-background.webp");
             background-size: cover;
             background-position: right;
             background-repeat: no-repeat;
@@ -161,14 +161,14 @@
 </head>
 <body>
     <header>
-        <a href="./"><img src="./src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="../"><img src="../src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="./fotos">FOTOS</a></li>
-                <li><a href="./regulamento">REGULAMENTO</a></li>
-                <li><a href="./resultados">RESULTADOS</a></li>
-                <li><a href="./inscricao">INSCRIÇÃO</a></li>
-                <!--<li><a href="./inscricao" target="_blank">INSCRIÇÃO</a></li>-->
+                <li><a href="../fotos">FOTOS</a></li>
+                <li><a href="../regulamento">REGULAMENTO</a></li>
+                <li><a href="../resultados">RESULTADOS</a></li>
+                <li><a href="../inscricao">INSCRIÇÃO</a></li>
+                <!--<li><a href="../inscricao" target="_blank">INSCRIÇÃO</a></li>-->
             </ul>
         </nav>
     </header>
@@ -184,7 +184,7 @@
             <div id="left">
                 <!--
                 <div class="image">
-                    <img id="desafio-romana-mtb" src="./src/img/romana-mtb/desafio-romana-mtb-logo.webp" alt="Logo Desafio Romana MTB.">
+                    <img id="desafio-romana-mtb" src="../src/img/romana-mtb/desafio-romana-mtb-logo.webp" alt="Logo Desafio Romana MTB.">
                 </div>
                 <div id="desafio-text" class="text">
                     <h2>04 / 02 / 2024</h2>
@@ -193,7 +193,7 @@
                     <h3>EM PROL DO INSTITUTO ABC</h3>
                 </div>
                 <div class="image">
-                    <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="./src/img/partners/instituto-abc.webp" alt="Logo Instituto ABC."></a>
+                    <a href="https://institutoabc.org.br" target="_blank"><img id="instituto-abc-logo" src="../src/img/partners/instituto-abc.webp" alt="Logo Instituto ABC."></a>
                 </div>
                 <div class="text">
                     <h2>19 / 05 / 2024</h2>
@@ -222,24 +222,24 @@
             <div id="partners">
                 <h2>PARCEIROS:</h2>
                 <div>
-                    <img src="./src/img/partners/automarax.webp" alt="Logo Automarax.">
-                    <img src="./src/img/partners/bike-podium.webp" alt="Logo Bike Podium.">
-                    <img src="./src/img/partners/bombeiros-voluntarios.webp" alt="Logo Bombeiros Voluntarios.">
-                    <img src="./src/img/partners/conara.webp" alt="Logo Conara.">
-                    <img src="./src/img/partners/csn.webp" alt="Logo CSN.">
-                    <img src="./src/img/partners/del-rey-bike.webp" alt="Logo Del Rey Bike.">
-                    <img src="./src/img/partners/domiciano-bike.webp" alt="Logo Domiciano Bike.">
-                    <img src="./src/img/partners/ebex.webp" alt="Logo Ebex.">
-                    <img src="./src/img/partners/fluir-bike.webp" alt="Logo Fluir Bike.">
-                    <img src="./src/img/partners/kowards-moto-club.webp" alt="Logo Koward's Moto Club.">
-                    <img src="./src/img/partners/liberdade-fm.webp" alt="Logo Liberdade FM.">
-                    <img src="./src/img/partners/mlj.webp" alt="Logo MLJ.">
-                    <img src="./src/img/partners/multiplanar.webp" alt="Logo Multiplanar.">
-                    <img src="./src/img/partners/racing-bike.webp" alt="Logo Racing Bike.">
-                    <img src="./src/img/partners/sicoob-mais.webp" alt="Logo Sicoob Mais.">
-                    <img src="./src/img/partners/sigo.webp" alt="Logo SIGO.">
-                    <img src="./src/img/partners/tec-ar.webp" alt="Logo Tec Ar.">
-                    <img src="./src/img/partners/vidromix.webp" alt="Logo Vidromix.">
+                    <img src="../src/img/partners/automarax.webp" alt="Logo Automarax.">
+                    <img src="../src/img/partners/bike-podium.webp" alt="Logo Bike Podium.">
+                    <img src="../src/img/partners/bombeiros-voluntarios.webp" alt="Logo Bombeiros Voluntarios.">
+                    <img src="../src/img/partners/conara.webp" alt="Logo Conara.">
+                    <img src="../src/img/partners/csn.webp" alt="Logo CSN.">
+                    <img src="../src/img/partners/del-rey-bike.webp" alt="Logo Del Rey Bike.">
+                    <img src="../src/img/partners/domiciano-bike.webp" alt="Logo Domiciano Bike.">
+                    <img src="../src/img/partners/ebex.webp" alt="Logo Ebex.">
+                    <img src="../src/img/partners/fluir-bike.webp" alt="Logo Fluir Bike.">
+                    <img src="../src/img/partners/kowards-moto-club.webp" alt="Logo Koward's Moto Club.">
+                    <img src="../src/img/partners/liberdade-fm.webp" alt="Logo Liberdade FM.">
+                    <img src="../src/img/partners/mlj.webp" alt="Logo MLJ.">
+                    <img src="../src/img/partners/multiplanar.webp" alt="Logo Multiplanar.">
+                    <img src="../src/img/partners/racing-bike.webp" alt="Logo Racing Bike.">
+                    <img src="../src/img/partners/sicoob-mais.webp" alt="Logo Sicoob Mais.">
+                    <img src="../src/img/partners/sigo.webp" alt="Logo SIGO.">
+                    <img src="../src/img/partners/tec-ar.webp" alt="Logo Tec Ar.">
+                    <img src="../src/img/partners/vidromix.webp" alt="Logo Vidromix.">
                 </div>
             </div>
         </div>
