--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Faça sua inscrição para o Pedal de Fátima 2024.">
     <!--<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e//viewform?usp=sf_link'"/>-->
     <title>Inscrição | Romana MTB</title>
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/romana-mtb.css">
-    <link rel="icon" href="./src/img/romana-mtb/romana-mtb-icon.webp">
+    <link rel="stylesheet" href="../src/css/reset.css">
+    <link rel="stylesheet" href="../src/css/romana-mtb.css">
+    <link rel="icon" href="../src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         /* Inscrição formulario */
         /*
@@ -27,13 +27,13 @@
 </head>
 <body>
     <header>
-        <a href="./"><img src="./src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="../"><img src="../src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="./fotos">FOTOS</a></li>
-                <li><a href="./regulamento">REGULAMENTO</a></li>
-                <li><a href="./resultados">RESULTADOS</a></li>
-                <li><a href="./inscricao">INSCRIÇÃO</a></li>
+                <li><a href="../fotos">FOTOS</a></li>
+                <li><a href="../regulamento">REGULAMENTO</a></li>
+                <li><a href="../resultados">RESULTADOS</a></li>
+                <li><a href="../inscricao">INSCRIÇÃO</a></li>
             </ul>
         </nav>
     </header>
