--- a/regulamento/index.html
+++ b/regulamento/index.html
@@ -7,9 +7,9 @@
     <meta property="og:site_name" content="Romana MTB">
     <meta name="description" content="Regulamento para o Pedal de Fátima 2024.">
     <title>Regulamento | Romana MTB</title>
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/romana-mtb.css">
-    <link rel="icon" href="./src/img/romana-mtb/romana-mtb-icon.webp">
+    <link rel="stylesheet" href="../src/css/reset.css">
+    <link rel="stylesheet" href="../src/css/romana-mtb.css">
+    <link rel="icon" href="../src/img/romana-mtb/romana-mtb-icon.webp">
     <style>
         /* Regulamento PDF */
         #regulamento-pdf {
@@ -20,14 +20,14 @@
 </head>
 <body>
     <header>
-        <a href="./"><img src="./src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
+        <a href="../"><img src="../src/img/romana-mtb/romana-mtb-branco-logo.webp" alt="Logo Romana MTB."></a>
         <nav>
             <ul>
-                <li><a href="./fotos">FOTOS</a></li>
-                <li><a href="./regulamento">REGULAMENTO</a></li>
-                <li><a href="./resultados">RESULTADOS</a></li>
-                <li><a href="./inscricao">INSCRIÇÃO</a></li>
-                <!--<li><a href="./inscricao" target="_blank">INSCRIÇÃO</a></li>-->
+                <li><a href="../fotos">FOTOS</a></li>
+                <li><a href="../regulamento">REGULAMENTO</a></li>
+                <li><a href="../resultados">RESULTADOS</a></li>
+                <li><a href="../inscricao">INSCRIÇÃO</a></li>
+                <!--<li><a href="../inscricao" target="_blank">INSCRIÇÃO</a></li>-->
             </ul>
         </nav>
     </header>
